# xlogger

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.rs  build_release.bat  main.py  release.rs  requirements.txt  visualize.py
.github/workflows/: build.yml
assets/: icon.icns
assets/macos/: Info.plist
src/: button_graph.rs  constants.py  error_window.rs  gilrs_loop.rs  lib.rs  main.rs  stick_graph.rs  util.rs  utils.py  visualize.py  writer_thread.py
