[package]
name = "xlogger"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
crossbeam-channel = "0.5"
ctrlc = "3.2.2"
eframe = "0.19"
gilrs = { version = "0.9.0", features = ["serde-serialize"] }
human-panic = "1.0.3"
image = "0.24.2"
log = "0.4.16"
rfd = "0.10.0"
serde = { version = "1.0.136", features = ["derive"] }
simplelog = { version = "0.12.0", features = ["paris"] }
strum = { version = "0.24", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

[build-dependencies]
image = "0.24.2"
winres = "0.1"
