[package]
name = "xlogger"
version = "0.3.0"
edition = "2021"
default-run = "xlogger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "release"
path = "./release.rs"
test = false
bench = false

[dependencies]
chrono = "0.4.22"
csv = "1.1.6"
crossbeam-channel = "0.5.6"
eframe = "0.19.0"
gilrs = { version = "0.9.0", features = ["serde-serialize"] }
human-panic = "1.0.3"
log = "0.4.17"
rfd = "0.10.0"
serde = { version = "1.0.144", features = ["derive"] }
simplelog = { version = "0.12.0", features = ["paris"] }
strum = { version = "0.24.1", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

[target.'cfg(windows)'.dependencies]
image = "0.24.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
image = "0.24.2"
